--- a/Gori/register.storyboard
+++ b/Gori/register.storyboard
@@ -25,7 +25,7 @@
                                 <rect key="frame" x="136" y="107" width="100" height="100"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="749" fixedFrame="YES" image="registerGuide.png" translatesAutoresizingMaskIntoConstraints="NO" id="Ztt-cp-DsD">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="749" fixedFrame="YES" image="registerGuide2.png" translatesAutoresizingMaskIntoConstraints="NO" id="Ztt-cp-DsD">
                                 <rect key="frame" x="0.0" y="362" width="375" height="209"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
@@ -216,8 +216,8 @@
                                 <rect key="frame" x="0.0" y="205" width="375" height="104"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <subviews>
-                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="malpoongsun5.png" translatesAutoresizingMaskIntoConstraints="NO" id="1Kc-Bh-MS7">
-                                        <rect key="frame" x="91" y="9" width="276" height="74"/>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="malpoongsunRefined2.png" translatesAutoresizingMaskIntoConstraints="NO" id="1Kc-Bh-MS7">
+                                        <rect key="frame" x="79" y="0.0" width="296" height="96"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                     </imageView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="신청 전에 원하시는 수업 장소와 가능한 시간을 한번 더 확인해주세요." textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tBo-hQ-ZLf">
@@ -255,7 +255,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="xBy-nl-cLc" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-778" y="-349"/>
+            <point key="canvasLocation" x="-778.5" y="-349.5"/>
         </scene>
         <!--Register Talent Second View Controller-->
         <scene sceneID="spz-oq-XeJ">
@@ -344,21 +344,21 @@
                                                 <rect key="frame" x="0.0" y="142" width="375" height="104"/>
                                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                 <subviews>
-                                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="malpoongsun5.png" translatesAutoresizingMaskIntoConstraints="NO" id="Vy9-cn-hAt">
-                                                        <rect key="frame" x="91" y="9" width="276" height="74"/>
+                                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="malpoongsunRefined2.png" translatesAutoresizingMaskIntoConstraints="NO" id="Vy9-cn-hAt">
+                                                        <rect key="frame" x="71" y="9" width="296" height="65"/>
+                                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    </imageView>
+                                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="gCP-Ud-Kfz">
+                                                        <rect key="frame" x="23" y="14" width="60" height="60"/>
                                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                     </imageView>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="수업 준비를 위해 아래의 항목들에 대해 미리 말씀해 주세요." textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xZl-4j-peN">
-                                                        <rect key="frame" x="111" y="20" width="241" height="49"/>
+                                                        <rect key="frame" x="99" y="0.0" width="241" height="88"/>
                                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                         <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                                         <nil key="highlightedColor"/>
                                                     </label>
-                                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="gCP-Ud-Kfz">
-                                                        <rect key="frame" x="23" y="14" width="60" height="60"/>
-                                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                    </imageView>
                                                 </subviews>
                                                 <color key="backgroundColor" red="0.89476326579999999" green="0.89476326579999999" blue="0.89476326579999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                             </view>
@@ -408,7 +408,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="b0Y-eS-AAC" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-36" y="-341"/>
+            <point key="canvasLocation" x="-36.5" y="-341.5"/>
         </scene>
         <!--Register Talent Third View Controller-->
         <scene sceneID="Z8q-XX-Q62">
@@ -499,13 +499,14 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
                     <connections>
-                        <segue destination="cv2-Og-cWK" kind="unwind" identifier="unwindMainSegue" unwindAction="unwindSegue:" id="6An-4k-vqz"/>
+                        <segue destination="hVt-8M-5uK" kind="show" identifier="registerFinalSegue" id="omP-Xy-VVv"/>
+                        <segue destination="cv2-Og-cWK" kind="unwind" identifier="unwindMainSegue" unwindAction="unwindSegue:" id="KlY-3A-m1z"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="81p-AS-rJr" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <exit id="cv2-Og-cWK" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="1612" y="-341"/>
+            <point key="canvasLocation" x="1847" y="-341"/>
         </scene>
         <!--Register Talent Fifth View Controller-->
         <scene sceneID="s4g-Be-vLE">
@@ -519,7 +520,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="pay1.png" translatesAutoresizingMaskIntoConstraints="NO" id="x3S-OH-EiT">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="pay2.png" translatesAutoresizingMaskIntoConstraints="NO" id="x3S-OH-EiT">
                                 <rect key="frame" x="0.0" y="44" width="375" height="145"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
@@ -531,25 +532,38 @@
                                 <state key="normal" title=" 확인">
                                     <color key="titleColor" red="0.97720271780000001" green="0.98014714400000003" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 </state>
+                                <connections>
+                                    <action selector="confirmBtnTouched:" destination="hVt-8M-5uK" eventType="touchUpInside" id="FHT-hB-rgj"/>
+                                </connections>
                             </button>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="learnAndLogo2.png" translatesAutoresizingMaskIntoConstraints="NO" id="4sE-0k-KTC">
+                                <rect key="frame" x="0.0" y="334" width="375" height="207"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
+                    <connections>
+                        <segue destination="UxM-ZE-yXX" kind="unwind" identifier="unwindMainSegue" unwindAction="unwindSegue:" id="MAs-kt-jKv"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ibc-qQ-U3K" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="UxM-ZE-yXX" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="2239" y="-349"/>
+            <point key="canvasLocation" x="2941.5" y="-341.5"/>
         </scene>
     </scenes>
     <resources>
         <image name="confirmation1.png" width="1536" height="483"/>
         <image name="confirmation2.png" width="1536" height="505"/>
+        <image name="learnAndLogo2.png" width="433" height="227"/>
         <image name="locationConfirm.png" width="1536" height="506"/>
         <image name="malpoongsun2.png" width="412" height="186"/>
         <image name="malpoongsun3.png" width="405" height="213"/>
-        <image name="malpoongsun5.png" width="408" height="103"/>
+        <image name="malpoongsunRefined2.png" width="441" height="137"/>
         <image name="pay1.png" width="1536" height="505"/>
-        <image name="registerGuide.png" width="806" height="370"/>
+        <image name="pay2.png" width="1536" height="505"/>
+        <image name="registerGuide2.png" width="806" height="370"/>
     </resources>
     <color key="tintColor" red="0.90980392160000001" green="0.1764705882" blue="0.31372549020000001" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
 </document>
