--- a/Gori/Main.storyboard
+++ b/Gori/Main.storyboard
@@ -1970,8 +1970,8 @@
     <inferredMetricsTieBreakers>
         <segue reference="ZTz-Dv-kBt"/>
         <segue reference="7vF-rB-vfR"/>
-        <segue reference="WOX-Wk-68P"/>
-        <segue reference="hZf-is-O1p"/>
+        <segue reference="Fjc-8S-uYf"/>
+        <segue reference="6ed-Na-bTL"/>
     </inferredMetricsTieBreakers>
     <color key="tintColor" red="0.90980392160000001" green="0.1764705882" blue="0.31372549020000001" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
 </document>
